--- a/camera-calibration/camera-calibration.cbp
+++ b/camera-calibration/camera-calibration.cbp
@@ -2,24 +2,26 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="camera-viewer" />
+		<Option title="camera-calibration" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/camera-viewer" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/camera-calibration" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
+				<Option parameters="calibration-configuration.xml" />
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/camera-viewer" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/camera-calibration" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="0" />
 				<Option compiler="gcc" />
+				<Option parameters="calibration-configuration.xml" />
 				<Compiler>
 					<Add option="-O2" />
 					<Add option="-s" />
@@ -32,7 +34,6 @@
 		<Linker>
 			<Add option="`pkg-config --libs opencv4`" />
 		</Linker>
-		<Unit filename="camera-calibration.xml" />
 		<Unit filename="main.cpp" />
 		<Extensions />
 	</Project>
