--- a/camera-calibration/camera-calibration.cbp
+++ b/camera-calibration/camera-calibration.cbp
@@ -2,26 +2,26 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="software" />
+		<Option title="camera-calibration" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/software" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/camera-calibration" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Option parameters="camera-calibration.xml 0 /dev/ttyUSB0 overview.png 9 7 335 230" />
+				<Option parameters="0 /dev/ttyUSB0" />
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/software" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/camera-calibration" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="0" />
 				<Option compiler="gcc" />
-				<Option parameters="camera-calibration.xml 0 /dev/ttyUSB0" />
+				<Option parameters="0 /dev/ttyUSB0" />
 				<Compiler>
 					<Add option="-O2" />
 					<Add option="-s" />
