--- a/camera-calibration/CMakeLists.txt
+++ b/camera-calibration/CMakeLists.txt
@@ -10,7 +10,7 @@ set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 include(CPack)
 
-find_package(OpenCV REQUIRED)
+find_package(OpenCV)
 find_package(PkgConfig)
 pkg_check_modules(SERIAL libserial)
 include_directories(${OpenCV_INCLUDE_DIRS} ${SERIAL_INCLUDE_DIRS})
