Reworked the software structure and made some overall style improvements.

--- a/manual-control/CMakeLists.txt
+++ b/manual-control/CMakeLists.txt
@@ -4,7 +4,7 @@ project(manual-control VERSION 0.1.0)
 include(CTest)
 enable_testing()
 
-add_executable(manual-control main.cpp)
+add_executable(manual-control main.cpp lib/opencv-helpers.hpp lib/opencv-helpers.cpp lib/libserial-helpers.hpp lib/libserial-helpers.cpp)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
